--- a/404-not-found-master/index.html
+++ b/404-not-found-master/index.html
@@ -1,95 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap');
+
+    *{
+      padding: 0;
+      margin: 0;
+      font-family: 'Bree Serif', serif;
+    }
+
+    h1{
+      font-size: 50px;
+    }
+
+    p{
+      font-size: 20px;
+      margin-top: 50px;
+      padding-right: 170px;
+      margin-bottom: 50px;
+    }
+
+    nav{
+      padding: 15px;
+      padding-bottom: 150px;
+      padding-left: 50px;
+    }
+
+    img{
+      width: 500px;
+      height: 500px;
+    }
+
+    button{
+      font-size: 10px;
+      height: 50px;
+      width: 150px;
+      background-color: rgb(48, 50, 51);
+      color: white;
+      border: rgb(48, 50, 51);
+    }
+
+    .container{
+      display: flex;
+      text-align: center;
+      flex-wrap: wrap;
+      min-width: 250px;
+    }
+
+    .container .col-txt{
+      display: inline-block;
+      width: 400px;
+      margin-top: 50px;
+      margin-left: 30px;
+      text-align: left;
+    }
+
+    .container .col-img{
+      display: inline-block;
+      width: 50%;
+    }
+
+    footer{
+      color: antiquewhite;
+      padding-top: 150px;
+      text-align: center;
+    }
+
+  </style>
   <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1,
-  maximum-scale=5"
-    />
-
-    <link rel="icon" href="devchallenges.png" />
-
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="https://devchallenges.io/"
-    />
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
-
-    <title>Devchallenges</title>
-
-    <style>
-      body {
-        font-family: "Poppins", sans-serif;
-      }
-
-      ul {
-        padding-left: 24px;
-      }
-
-      li {
-        margin-bottom: 8px;
-      }
-
-      .welcome {
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-      .welcome-text {
-        margin-top: 30vh;
-        font-weight: 500;
-      }
-
-      .welcome-text p {
-        font-size: 1rem;
-        font-weight: 400;
-      }
-
-      .welcome-text h1 {
-        font-size: 1.5rem;
-      }
-
-      .welcome-text a {
-        color: #f7542e;
-      }
-    </style>
+    <meta lang="en">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>404 NOT FOUND</title>
   </head>
   <body>
-    <div class="welcome">
-      <div class="welcome-text">
-        <h1>
-          Welcome to
-          <a href="https://devchallenges.io/" target="_blank"
-            >devchallenges.io</a
-          >
-        </h1>
-
-        <p>
-          If you have any questions, don't hesitate to ask on Discord. Here are
-          7 general steps to complete the challenge:
-        </p>
+    <nav>
+      404 NOT FOUND
+    </nav>
+    <div class="container">
+      <div class="col-img">
+        <img src="Scarecrow.png" alt="Scarecrow">
       </div>
-
-      <ul>
-        <li><b>Step 1:</b> Create a new repository on github</li>
-        <li><b>Step 2:</b> Copy resources, README.md to your repository</li>
-        <li>
-          <b>Step 3:</b> Login to Figma to checkout font, color, spacing,..
-        </li>
-        <li><b>Step 4:</b> Complete all user stories</li>
-        <li><b>Step 5:</b> Update README.md</li>
-        <li><b>Step 6:</b> Deploy your app and submit your solution</li>
-        <li>
-          <b>Step 7:</b> Share your solution on Discord, Twitter and other
-          platforms to ask for feedback
-        </li>
-      </ul>
+      <div class="col-txt">
+        <h1>I have bad news for you</h1>
+        <p>
+          The page you are looking
+          for might be remove or is
+          temporaly unavailable.
+        </p>
+        <button>BACK TO HOMEPAGE</button>
+      </div>
     </div>
+    <footer>
+      &copy created by Juan Pablo Claro - DevChallenges.io
+    </footer>
   </body>
 </html>
